# Zappy

./: CMakeLists.txt  Makefile  README.md  generationAi
Client/Class/: Command.cpp  Command.hpp  Socket.cpp  Socket.hpp
Client/Class/Ai/: Ai.cpp  Ai.hpp  AiAlgoManagement.cpp  AiBroadcast.cpp  AiLevelUp.cpp  AiMouvement.cpp  AiSearchObject.cpp  AiServerAnswersManagement.cpp
Client/Graphical/: main.cpp
Client/Graphical/Assets/: pick.aiff
Client/Graphical/include/: IScene.hpp  ServerChoosingScene.hpp  board.hpp  chatGui.hpp  commandHandler.hpp  item.hpp  partOfPlayersInfosGUI.hpp  player.hpp  playersInfosGUI.hpp  tile.hpp  tilesInfosGUI.hpp  zappy.hpp
Client/Graphical/src/: ServerChoosingScene.cpp  board.cpp  chatGui.cpp  commandHandler.cpp  item.cpp  partOfPlayersInfosGUI.cpp  player.cpp  playersInfosGUI.cpp  tile.cpp  tilesInfosGUI.cpp  zappy.cpp
Client/Graphical/tools/include/: animation.hpp  mathematicalOperations.hpp  stringManager.hpp  tcpCommunication.hpp
Client/Graphical/tools/src/: animation.cpp  mathematicalOperations.cpp  stringManager.cpp  tcpCommunication.cpp
Client/Header/: Client.hpp
Client/Parsing/: Parsing.cpp  Parsing.hpp
Client/Src/: Main.cpp
Server/Header/: libc_headers.h  linkedlist.h  my_functions.h  my_structures.h
Server/Src/client_funcs/: check_for_new_client.c  get_clients_commands.c  handle_clients_commands.c  interpret_commands.c  players_life_management.c  remove_a_client_from_server.c
Server/Src/client_funcs/graphical_client_infos/: tell_all_graphical_clients.c  tell_eject.c  tell_graphical_broadcast.c  tell_graphical_client_useful_infos.c  tell_graphical_dead.c  tell_graphical_egg_dying.c  tell_graphical_egg_hatching.c  tell_graphical_egg_laying.c  tell_graphical_forward.c  tell_graphical_incantation_end.c  tell_graphical_incantation_start.c  tell_graphical_resource_change.c  tell_graphical_winning_team.c  tell_new_connection.c
Server/Src/commands/commands_utility/: command_infos.c  dead.c  entity_utility.c  failed.c  get_next_type.c
Server/Src/commands/graphical_side/map_related/: bct.c  mct.c  msz.c
Server/Src/commands/graphical_side/other/: graphical_start_infos.c  scan.c  usf.c  usr.c
Server/Src/commands/graphical_side/other/chat/: chat.c  kick.c  set_user.c  (+1 more)
Server/Src/commands/graphical_side/played_related/: pin.c  plv.c  ppo.c
Server/Src/commands/graphical_side/team_related/: tna.c
Server/Src/commands/graphical_side/time_related/: sgt.c  sst.c
Server/Src/commands/ia_side/actions/: broadcast_text.c  connect_nbr.c  eject.c  fork.c  forward.c  incantation.c  inventory.c  left.c  right.c  set.c  start_incantation.c  take.c
Server/Src/communication/: send_or_buffer_it.c
Server/Src/miscellaneous/: clock_seconds.c
Server/Src/miscellaneous/lambdas/: lambdas_one.c  lambdas_two.c  lamdas_three.c
Server/Src/server_funcs/: check_endgame.c  eggs_hatching_verification.c  free_if_sigint.c  free_the_server.c  init_constant_variables.c  init_server.c  main.c  proceed_connection.c  random_resources_generation.c
Server/Src/server_funcs/argument_parsing/: argument_is_set.c  argument_parsing.c  default_arguments.c
Server/libc/: character_verifications.c  clean_str.c  cut_str.c  exit_error.c  find_occurencies.c  get_file.c  get_next_line.c  getchar.c  getnbr.c  intlen.c  linked_list_func.c  linkedlist.c  linkedlist.h  linkedlist_funcs.c  linkedlist_insert.c  linkedlist_modifications.c  linkedlist_moving.c  linkedlist_node_transfert.c  my_str_to_word_array.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strlen.c  my_strncat.c  my_strncmp.c  my_strncpy.c  putnbr.c  remove_and_free_lk.c  safe_linkedlist_getters.c  string_func.c  string_size_test.c  strings_to_two_dim.c  two_dim_tab_funcs.c  vprint.c
doc/: doxygen.conf
ezSFML/: Makefile
(+2 files in other folders)
